--- a/fotak.html
+++ b/fotak.html
@@ -9,12 +9,16 @@
 </head>
 <body>
     <div class="phonefotak">
+        
         <div class="top-bar">
-            <p id="time">12:02</p>
-            <div class="icons">📶 🛜 🔋</div>
+            <div class="top-bar-inner">
+                <p id="time">12:02</p>
+                <div class="icons">📶 🛜 🔋</div>
+            </div>
         </div>
-        <div class="notch">
-            <div class="sensor"></div>
+        
+        <div class="notchfotak">
+            <div class="sensorfotak"></div>
         </div>
         <div class="camera-container">
             <video class="camera-feed" autoplay playsinline></video>
