--- a/hlavni_telefon.html
+++ b/hlavni_telefon.html
@@ -100,12 +100,13 @@
         
         <div class="bottom-icons">
             <div class="icon">
-                <a href="Nastaveni.html"></a>
-                <img src="obrazky/nastaveni.png" alt="Telefon">
+                <a href="Nastaveni.html">
+                <img src="obrazky/nastaveni.png" alt="Nastaveni">
+            </a>
             </div>
             <div class="icon">
                 <a href="volani.html">
-                <img src="obrazky/telefon_2.png" alt="Uzivatel">
+                <img src="obrazky/telefon_2.png" alt="volani">
                 </a>
             </div>
             <div class="icon">
