--- a/toneboto.html
+++ b/toneboto.html
@@ -8,7 +8,7 @@
     
 </head>
 <body>
-    <div class="phonemobilnibanka">
+    <div class="phonetoneboto">
         <div class="screen" id="screen"></div> 
         <div class="notch">
             <div class="sensor"></div>
