--- a/Nastaveni.html
+++ b/Nastaveni.html
@@ -26,7 +26,7 @@
         <div class="volume-button-down"></div>
 
        
-        <div class="header">Nastaveni</div>
+        <div class="header">Nastavení</div>
         
         <div class="settings-option">
             <span>Režim letadlo</span>
