--- a/hlavni_telefon.html
+++ b/hlavni_telefon.html
@@ -26,11 +26,11 @@
         <div class="icon-grid">
             <div class="icon-container">
                 <div class="icon">
-                    <a href="toneboto.html">
+                    <a href="hodminci.html">
                         <img src="obrazky/toneboto.png" alt="To nebo to">
                     </a>
                 </div>
-                <span class="icon-label">To nebo To</span>
+                <span class="icon-label">Hod mincí</span>
             </div>
             <div class="icon-container">
                 <div class="icon">
