--- a/pong.html
+++ b/pong.html
@@ -2,7 +2,7 @@
 <html lang="cz">
 <head>
     <meta charset="UTF-8">
-    <title>Pong pro jednoho hráče</title>
+    <title>Pong</title>
     <link rel="stylesheet" href="styly_celkove.css">
     <style>
         canvas {
