--- a/Dino (2).html
+++ b/Dino (2).html
@@ -2,7 +2,7 @@
 <html lang="cz">
 <head>
     <meta charset="UTF-8">
-    <title>Dino Game</title>
+    <title>Dino</title>
     <link rel="stylesheet" href="styly_celkove.css">
     <style>
         canvas {
